{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 2052,
  "lineage": "25e4717b-3eb2-caa9-a4d2-aaecd1e2623e",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "test_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/f9cde636-485e-43ba-9cf5-9d6763cc49b3/resourceGroups/test-new/providers/Microsoft.Network/networkInterfaces/test-nic",
            "internal_domain_name_suffix": "3mo3agvltqte3ahvfvg0axht0f.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "test-ip",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/f9cde636-485e-43ba-9cf5-9d6763cc49b3/resourceGroups/test-new/providers/Microsoft.Network/publicIPAddresses/test-public-ip",
                "subnet_id": "/subscriptions/f9cde636-485e-43ba-9cf5-9d6763cc49b3/resourceGroups/test-new/providers/Microsoft.Network/virtualNetworks/test-vnet/subnets/test-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "mac_address": "7C-1E-52-82-6C-20",
            "name": "test-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "test-new",
            "virtual_machine_id": "/subscriptions/f9cde636-485e-43ba-9cf5-9d6763cc49b3/resourceGroups/test-new/providers/Microsoft.Compute/virtualMachines/test-vm"
          },
          "dependencies": [
            "azurerm_public_ip.test_pip",
            "azurerm_resource_group.test",
            "azurerm_subnet.test_subnet",
            "azurerm_virtual_network.test_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "test_nic_nsg_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f9cde636-485e-43ba-9cf5-9d6763cc49b3/resourceGroups/test-new/providers/Microsoft.Network/networkInterfaces/test-nic|/subscriptions/f9cde636-485e-43ba-9cf5-9d6763cc49b3/resourceGroups/test-new/providers/Microsoft.Network/networkSecurityGroups/test-nsg",
            "network_interface_id": "/subscriptions/f9cde636-485e-43ba-9cf5-9d6763cc49b3/resourceGroups/test-new/providers/Microsoft.Network/networkInterfaces/test-nic",
            "network_security_group_id": "/subscriptions/f9cde636-485e-43ba-9cf5-9d6763cc49b3/resourceGroups/test-new/providers/Microsoft.Network/networkSecurityGroups/test-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.test_nic",
            "azurerm_network_security_group.test_nsg",
            "azurerm_public_ip.test_pip",
            "azurerm_resource_group.test",
            "azurerm_subnet.test_subnet",
            "azurerm_virtual_network.test_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "test_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f9cde636-485e-43ba-9cf5-9d6763cc49b3/resourceGroups/test-new/providers/Microsoft.Network/networkSecurityGroups/test-nsg",
            "location": "eastus",
            "name": "test-nsg",
            "resource_group_name": "test-new",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-ssh",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/f9cde636-485e-43ba-9cf5-9d6763cc49b3/resourceGroups/test-new/providers/Microsoft.Network/networkSecurityGroups/test-nsg/securityRules/allow-ssh",
            "name": "allow-ssh",
            "network_security_group_name": "test-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "test-new",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.test_nsg",
            "azurerm_resource_group.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "test_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/f9cde636-485e-43ba-9cf5-9d6763cc49b3/resourceGroups/test-new/providers/Microsoft.Network/publicIPAddresses/test-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "13.82.23.197",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "test-public-ip",
            "resource_group_name": "test-new",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "test_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/f9cde636-485e-43ba-9cf5-9d6763cc49b3/resourceGroups/test-new/providers/Microsoft.Network/virtualNetworks/test-vnet/subnets/test-subnet",
            "name": "test-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "test-new",
            "virtual_network_name": "test-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.test",
            "azurerm_virtual_network.test_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "test_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "1ad01deb-9cab-4e26-80f5-2d4da05cf3d5",
            "id": "/subscriptions/f9cde636-485e-43ba-9cf5-9d6763cc49b3/resourceGroups/test-new/providers/Microsoft.Network/virtualNetworks/test-vnet",
            "location": "eastus",
            "name": "test-vnet",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "test-new",
            "subnet": [
              {
                "address_prefixes": [
                  "10.0.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/f9cde636-485e-43ba-9cf5-9d6763cc49b3/resourceGroups/test-new/providers/Microsoft.Network/virtualNetworks/test-vnet/subnets/test-subnet",
                "name": "test-subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.test"
          ]
        }
      ]
    }
  ]
}